--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
         <header class="header" id="header">
             <nav class="nav container">
                 <a href="/" class="nav__logo">
-                    <i class="ri-steering-line"></i>
                     Эмпирия
                 </a>
 
@@ -65,14 +64,17 @@
                 <div class="home__container container grid">
                     <div class="home__data">
                         <h1 class="home__title">
-                            Choose The Best Car
+                            <img src="assets/img/empeiria-logo.svg" alt="Эмпирия" class="empeiria_logo">
                         </h1>
 
                         <h2 class="home__subtitle">
-                            Porshe Mission E
+                            Ранний доступ в 2026-м
                         </h2>
+
                         <h3 class="home__elec">
-                            <i class="ri-flashlight-fill"></i>
+                            <i class="ri-windows-fill"></i>
+                            <i class="ri-steam-fill"></i>
+                            <i class="ri-ubuntu-fill"></i>
                         </h3>
                     </div>
                     <img src="assets/img/home.png" alt="" class="home__img">
@@ -80,26 +82,26 @@
                     <div class="home__car">
                         <div class="home__car-data">
                             <div class="home__car-icon">
-                                <i class="ri-temp-cold-line"></i>
+                                <i class="ri-user-settings-line"></i>
                             </div>
-                            <h2 class="home__car-number">24°</h2>
-                            <h2 class="home__car-name">TEMPERATURE</h2>
+                            <h2 class="home__car-number">RPG</h2>
+                            <h2 class="home__car-name">Партийная ролевая игра</h2>
                         </div>
 
                         <div class="home__car-data">
                             <div class="home__car-icon">
-                                <i class="ri-dashboard-2-line"></i>
+                                <i class="ri-chess-line"></i>
                             </div>
-                            <h2 class="home__car-number">873</h2>
-                            <h2 class="home__car-name">MILEAGE</h2>
+                            <h2 class="home__car-number">TBS</h2>
+                            <h2 class="home__car-name">Пошаговая тактика</h2>
                         </div>
 
                         <div class="home__car-data">
                             <div class="home__car-icon">
-                                <i class="ri-flashlight-fill"></i>
+                                <i class="ri-dice-fill"></i>
                             </div>
-                            <h2 class="home__car-number">94%</h2>
-                            <h2 class="home__car-name">BATTERY</h2>
+                            <h2 class="home__car-number">ADV</h2>
+                            <h2 class="home__car-name">Текстовые квесты</h2>
                         </div>
                     </div>
 
@@ -114,25 +116,49 @@
                         <img src="assets/img/about.png" alt="" class="about__img">
 
                         <div class="about__card">
-                            <h3 class="about__card-title">2.500+</h3>
+                            <h3 class="about__card-title">Стратегия и тактика</h3>
                             <p class="about__card-description">
-                                Supercharges placed along popular routes
+                                Отряд герове путешествует на глобальной карте и сражается на тактических аренах.
                             </p>
                         </div>
                     </div>
 
                     <div class="about__data">
                         <h2 class="section__title about__title">
-                            Machines With <br> Future Technology
+                            Общая информация
                         </h2>
 
                         <p class="about__description">
-                            See the future with high-performance electric cars produced by 
-                            renowned brands. They feature futuristic builds and designs with 
-                            new and innovative platforms that last a long time.
+                            Эмпирия - это фэнтезийная тактическая ролевая инди-игра.
+
+                            Действие происходит в оригинальном сеттинге на планете, где существует магия.
+
+                            Главный герой - случайная, по сути, жертва огромного механизма Империи,
+                            которая идет по земле, сметая всё на своем пути.
+
+                            Сперва герой ослеплен горечью и яростью и хочет отомстить далекому и грозному Императору,
+                            но чем больше он узнает о мире и о себе на этом непростом пути, тем больше возникает
+                            вопросов, и тем меньше остается простых ответов.
                         </p>
 
-                        <a href="#" class="button">Know more</a>
+                        <!--h2 class="section__title about__title">
+                            Основные особенности
+                        </h2>
+
+                        <div class="about__description">
+                            <ul>
+                                <li>Колоритные спутники с проработанными личными историями.</li>
+                                <li>Путешествия небольшого отряда авантюристов по большому и многообразному миру.</li>
+                                <li>Тактические сражения с разнообразными противниками.</li>
+                                <li>Случайные события и социальные квесты.</li>
+                                <li>Система прокачки и экипировки персонажей.</li>
+                                <li>Выборы игрока влияют на развитие сюжета.</li>
+                                <li>Эпическая история, затрагивающая самые разные аспекты этого мира.</li>
+                                <li>Оригинальный саундтрек с личными песнями персонажей.</li>
+                            </ul>
+                        </div-->
+
+                        <a href="#" class="button">Подробнее</a>
                     </div>
                 </div>
             </section>
@@ -140,10 +166,10 @@
             <!--==================== POPULAR ====================-->
             <section class="popular section" id="popular">
                 <h2 class="section__title">
-                    Choose Your Electric Car <br> Of The Porsche Brand
+                    Предзаказ <br> в начале 2026-го года
                 </h2>
 
-                <div class="popular__container container swiper">
+                <!--div class="popular__container container swiper">
                     <div class="swiper-wrapper">
                         <article class="popular__card swiper-slide">
                             <div class="shape shape__smaller"></div>
@@ -281,11 +307,11 @@
                         </article>
                     </div>
                     <div class="swiper-pagination"></div>
-                </div>
+                </div-->
             </section>
 
             <!--==================== FEATURES ====================-->
-            <section class="features section">
+            <!--section class="features section">
                 <h2 class="section__title">
                     More Features
                 </h2>
@@ -312,15 +338,15 @@
                 </div>
 
                 <img src="assets/img/map.svg" alt="" class="features__map">
-            </section>
+            </section-->
 
             <!--==================== FEATURED ====================-->
             <section class="featured section" id="featured">
                 <h2 class="section__title">
-                    Featured Luxury Cars
+                    Пресс-кит (в разработке)
                 </h2>
 
-                <div class="featured__container container">
+                <!--div class="featured__container container">
                     <ul class="featured__filters">
                         <li>
                             <button class="featured__item active-featured" data-filter="all">
@@ -426,11 +452,11 @@
                         </article>
 
                     </div>
-                </div>
+                </div-->
             </section>
 
             <!--==================== OFFER ====================-->
-            <section class="offer section">
+            <!--section class="offer section">
                 <div class="offer__container container grid">
                     <img src="assets/img/offer-bg.png" alt="" class="offer__bg">
 
@@ -452,10 +478,10 @@
 
                     <img src="assets/img/offer.png" alt="" class="offer__img">
                 </div>
-            </section>
+            </section-->
 
             <!--==================== LOGOS ====================-->
-            <section class="logos section">
+            <!--section class="logos section">
                 <div class="logos__container container grid">
                     <div class="logos__content">
                         <img src="assets/img/logo1.png" alt="" class="logos__img">
@@ -481,7 +507,7 @@
                         <img src="assets/img/logo6.png" alt="" class="logos__img">
                     </div>
                 </div>
-            </section>
+            </section-->
         </main>
 
         <!--==================== FOOTER ====================-->
@@ -489,7 +515,7 @@
             <div class="shape shape__big"></div>
             <div class="shape shape__small"></div>
 
-            <div class="footer__container container grid">
+            <!--div class="footer__container container grid">
                 <div class="footer__content">
                     <a href="#" class="footer__logo">
                         <i class="ri-steering-line"></i> Эмпирия
@@ -567,7 +593,7 @@
                         </li>
                     </ul>
                 </div>
-            </div>
+            </div-->
 
             <span class="footer__copy">
                 &#169; Эмпирия
