Working on the OST section

--- a/index.html
+++ b/index.html
@@ -169,117 +169,121 @@
                     Предзаказ <br> в начале 2026-го года
                 </h2>
 
-                <!--div class="popular__container container swiper">
+                <div class="popular__container container swiper">
                     <div class="swiper-wrapper">
                         <article class="popular__card swiper-slide">
                             <div class="shape shape__smaller"></div>
 
-                            <h1 class="popular__title">Porsche</h1>
-                            <h3 class="popular_subtitle">Turbo S</h3>
+                            <h1 class="popular__title">Эмпирия OST</h1>
+                            <h3 class="popular_subtitle">Часть 1</h3>
 
+                            <a href="https://band.link/empeiria" target="_blank">
                             <img src="assets/img/popular1.png" alt="" class="popular__img">
+                            </a>
 
                             <div class="popular__data">
                                 <div class="popular__data-group">
-                                    <i class="ri-dashboard-3-line"></i> 3.7 Sec
+                                    <i class="ri-file-music-line"></i> 10 треков
                                 </div>
                                 <div class="popular__data-group">
-                                    <i class="ri-funds-box-line"></i> 356 Km
+                                    <i class="ri-time-line"></i> 30 минут
                                 </div>
                                 <div class="popular__data-group">
-                                    <i class="ri-charging-pile-2-line"></i> Electric
+                                    <i class="ri-music-line"></i> Рок
                                 </div>
                             </div>
 
-                            <h3 class="popular__price">$175,900</h3>
+                            <h3 class="popular__price">31.12.2024</h3>
 
+                            <a href="https://band.link/empeiria" target="_blank">
                             <button class="button popular__button">
-                                <i class="ri-shopping-bag-2-line"></i>
+                                <i class="ri-headphone-line"></i>
                             </button>
+                            </a>
                         </article>
 
                         <article class="popular__card swiper-slide">
                             <div class="shape shape__smaller"></div>
 
-                            <h1 class="popular__title">Porsche</h1>
-                            <h3 class="popular_subtitle">Taycan</h3>
+                            <h1 class="popular__title">Эмпирия OST</h1>
+                            <h3 class="popular_subtitle">Часть 2</h3>
 
                             <img src="assets/img/popular2.png" alt="" class="popular__img">
 
                             <div class="popular__data">
                                 <div class="popular__data-group">
-                                    <i class="ri-dashboard-3-line"></i> 3.7 Sec
+                                    <i class="ri-file-music-line"></i> 10 треков
                                 </div>
                                 <div class="popular__data-group">
-                                    <i class="ri-funds-box-line"></i> 356 Km
+                                    <i class="ri-time-line"></i> 33 минуты
                                 </div>
                                 <div class="popular__data-group">
-                                    <i class="ri-charging-pile-2-line"></i> Electric
+                                    <i class="ri-music-line"></i> Рок
                                 </div>
                             </div>
 
-                            <h3 class="popular__price">$114,900</h3>
+                            <h3 class="popular__price">TBA</h3>
 
-                            <button class="button popular__button">
+                            <!--button class="button popular__button">
                                 <i class="ri-shopping-bag-2-line"></i>
-                            </button>
+                            </button-->
                         </article>
 
                         <article class="popular__card swiper-slide">
                             <div class="shape shape__smaller"></div>
 
-                            <h1 class="popular__title">Porsche</h1>
-                            <h3 class="popular_subtitle">Turbo S Cross</h3>
+                            <h1 class="popular__title">Эмпирия OST</h1>
+                            <h3 class="popular_subtitle">Часть 3</h3>
 
                             <img src="assets/img/popular3.png" alt="" class="popular__img">
 
                             <div class="popular__data">
                                 <div class="popular__data-group">
-                                    <i class="ri-dashboard-3-line"></i> 3.7 Sec
+                                    <i class="ri-file-music-line"></i> 10 треков
                                 </div>
                                 <div class="popular__data-group">
-                                    <i class="ri-funds-box-line"></i> 356 Km
+                                    <i class="ri-time-line"></i> 20 минут
                                 </div>
                                 <div class="popular__data-group">
-                                    <i class="ri-charging-pile-2-line"></i> Electric
+                                    <i class="ri-music-line"></i> Рок
                                 </div>
                             </div>
 
-                            <h3 class="popular__price">$150,900</h3>
+                            <h3 class="popular__price">TBA</h3>
 
-                            <button class="button popular__button">
+                            <!--button class="button popular__button">
                                 <i class="ri-shopping-bag-2-line"></i>
-                            </button>
+                            </button-->
                         </article>
 
                         <article class="popular__card swiper-slide">
                             <div class="shape shape__smaller"></div>
 
-                            <h1 class="popular__title">Porsche</h1>
-                            <h3 class="popular_subtitle">Boxster 718</h3>
+                            <h1 class="popular__title">Невидимый цвет</h1>
+                            <h3 class="popular_subtitle">2024</h3>
 
                             <img src="assets/img/popular4.png" alt="" class="popular__img">
 
                             <div class="popular__data">
                                 <div class="popular__data-group">
-                                    <i class="ri-dashboard-3-line"></i> 3.7 Sec
+                                    <i class="ri-file-music-line"></i> 10 треков
                                 </div>
                                 <div class="popular__data-group">
-                                    <i class="ri-funds-box-line"></i> 356 Km
+                                    <i class="ri-time-line"></i> 28 минут
                                 </div>
                                 <div class="popular__data-group">
-                                    <i class="ri-charging-pile-2-line"></i> Electric
+                                    <i class="ri-music-line"></i> Рок
                                 </div>
                             </div>
 
-                            <h3 class="popular__price">$125,900</h3>
+                            <h3 class="popular__price">TBA</h3>
 
-                            <button class="button popular__button">
+                            <!--button class="button popular__button">
                                 <i class="ri-shopping-bag-2-line"></i>
-                            </button>
+                            </button-->
                         </article>
 
-                        <article class="popular__card swiper-slide">
+                        <!--article class="popular__card swiper-slide">
                             <div class="shape shape__smaller"></div>
 
                             <h1 class="popular__title">Porsche</h1>
@@ -304,10 +308,10 @@
                             <button class="button popular__button">
                                 <i class="ri-shopping-bag-2-line"></i>
                             </button>
-                        </article>
+                        </article-->
                     </div>
                     <div class="swiper-pagination"></div>
-                </div-->
+                </div>
             </section>
 
             <!--==================== FEATURES ====================-->
@@ -596,7 +600,8 @@
             </div-->
 
             <span class="footer__copy">
-                &#169; Эмпирия
+                &#169; <a href="https://buhurt.ru">Buhurt Team</a>
+                | <a href="mailto:empeiria@buhurt.ru">empeiria@buhurt.ru</a>
             </span>
         </footer>
 
