--- a/index.html
+++ b/index.html
@@ -17,6 +17,27 @@
         <link rel="stylesheet" href="assets/css/style.css">
 
         <title>Эмпирия | Empeiria</title>
+
+        <meta name="description" content="Эмпирия — это фэнтезийная тактическая ролевая инди-игра. Действие происходит в оригинальном сеттинге на планете, где существует магия. Ранний доступ в 2026-м. 18+">
+
+        <meta name="yandex-verification" content="fafc8515b96f2f37" />
+
+        <!-- Yandex.Metrika counter -->
+        <script type="text/javascript" >
+            (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+                m[i].l=1*new Date();
+                for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+                k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+            (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+            ym(99386614, "init", {
+                clickmap:true,
+                trackLinks:true,
+                accurateTrackBounce:true
+            });
+        </script>
+        <noscript><div><img src="https://mc.yandex.ru/watch/99386614" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+        <!-- /Yandex.Metrika counter -->
     </head>
     <body>
         <!--==================== HEADER ====================-->
