--- a/index.html
+++ b/index.html
@@ -310,10 +310,10 @@
 
                             <div class="preorder__data">
                                 <div class="preorder__data-group">
-                                    <i class="ri-file-music-line"></i> 10 треков
+                                    <i class="ri-file-music-line"></i> 20 треков
                                 </div>
                                 <div class="preorder__data-group">
-                                    <i class="ri-time-line"></i> 20 минут
+                                    <i class="ri-time-line"></i> 53 минуты
                                 </div>
                                 <div class="preorder__data-group">
                                     <i class="ri-music-line"></i> Рок
@@ -417,12 +417,19 @@
 
             <!--==================== PRESS ====================-->
             <section class="press section" id="press">
-                <h2 class="section__title">
-                    Пресс-кит (в разработке)
-                </h2>
+                <a href="/assets/empeiria-game-press-kit.zip" class="press__link">
+                    <h2 class="section__title">
+                        Пресс-кит
+                    </h2>
+                </a>
 
-                <!--div class="press__container container">
-                    <ul class="press__filters">
+                <div class="press__container container">
+
+                    <div class="press__description">
+                        Краткая информация об игре и основные графические материалы для прессы
+                    </div>
+
+                    <!--ul class="press__filters">
                         <li>
                             <button class="press__item active-press" data-filter="all">
                                 <span>All</span>
@@ -526,8 +533,9 @@
                             </button>
                         </article>
 
-                    </div>
-                </div-->
+                    </div-->
+
+                </div>
             </section>
 
             <!--==================== OFFER ====================-->
