--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                         </div>
                     </div>
 
-                    <a href="#preorder" class="home__button">PLAY</a>
+                    <a href="/quests/here_comes_the_caravan/" class="home__button">PLAY</a>
                 </div>
             </section>
 
