Update demo, add link to VK Play

--- a/quests/here_comes_the_caravan/index.html
+++ b/quests/here_comes_the_caravan/index.html
@@ -36,6 +36,7 @@
         <h3 class="written-in-ink"><a href="https://empeiria.site">Эмпирия</a></h3>
 
         <div id="controls" class="buttons">
+          <a id="vk-play" title="VK Play" href="https://vkplay.ru/play/game/empeiria/" target="_blank">VK Play</a>
           <a id="rewind" title="Restart story from beginning">restart</a>
           <a id="save" title="Save progress">save</a>
           <a id="reload" title="Reload from save point">load</a>
